welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: type mismatch;
 found   : Int(6)
 required: java.awt.Color
  var T=Array[Color](6)
                     ^Array1:17: error: not found: value getColeurBrosse
  T(5)=getColeurBrosse()
       ^Array1:26: error: not found: value T
    setCouleurBrosse(T(i))
                     ^Array1:31: error: not found: value setColeurBrosse
  setColeurBrosse(T(5))
  ^Array1:31: error: not found: value T
  setColeurBrosse(T(5))
                  ^